# mcheck-cvc4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_components/: FindCVC4.cmake
